add link to event - add data in table

--- a/www/events.html
+++ b/www/events.html
@@ -1,7 +1,14 @@
 <html>
-<head>
-</head>
 <body>
-<h1>Events</h1>
+<table id="personDataTable">
+    <tr>
+        <th>תאריך עידכון</th>
+        <th>אירוע</th>
+    </tr>
+</table>
+<link rel="stylesheet" type="text/css" href="css/events.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/events.js"></script>
+
 </body>
 </html>
