add rights button and rights html page

--- a/www/index.html
+++ b/www/index.html
@@ -47,11 +47,15 @@
                 <!--daniel - take object and populate event.htm-->
                 window.location="events.html";
             }
+            function gotoRights () {
+                window.location="rights.html";
+            }
 
         </script>
     <div>
         <img src="img/Gdolim.png" style="width: 100%;">
         <button onclick="gotoEvents()">ארועים</button>
+        <button onclick="gotoRights()">זכויות</button>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
