--- a/www/index.html
+++ b/www/index.html
@@ -68,8 +68,38 @@
     initFirebase();
 
     getEvents();
+	
+	// https://firebase.google.com/docs/storage/web/download-files
+	function getFile (folder, filename, onOk, onError) {
+		// Create a reference with an initial file path and name
+		var storage = firebase.storage();
+		
+		var pathReference = storage.ref(folder); // example: 'images/stars.jpg'
+	
+		pathReference.child(filename).getDownloadURL().then(function(url) { // example filename: 'images/stars.jpg'
+		  // `url` is the download URL for 'images/stars.jpg'
+
+		  // This can be downloaded directly:
+		  var xhr = new XMLHttpRequest();
+		  xhr.responseType = 'text'
+		  xhr.onload = function(event) {
+			var clob = xhr.response;
+			onOk(clob);
+		  };
+		  xhr.open('GET', url);
+		  xhr.send();
+		}).catch(function(error) {
+		  onError(error);
+		});
+	}
+	
     function getEvents()
     {
+		getFile('events', 'events-list.txt', function onOk(content) {
+			console.log(content);
+		}, function onError(error) {
+			console.error(error);
+		})	;
         console.log("In get Event");
     }
 </script>
