update all pages with back button and css

--- a/www/events_list.html
+++ b/www/events_list.html
@@ -5,32 +5,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
-<div class="events-header">
-    <img class="events-header-img" src="img/gdolim_header.png">
-</div>
-<div class="events-content flex-rows">
-    <div class="events-content-title">לוח אירועים</div>
-    <img class="events-content-img" src="img/events-header.jpg">
-    <div id="events_content"
-         class="events-content-container flex-cols">
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+    <div class="events-header">
+        <img class="events-header-img" src="img/gdolim_header.png">
     </div>
-</div>
-<div class="events-footer flex-cols">
-    <div class="events-footer-details">
-        <div><strong>טלפון:</strong> 036195977 </div>
-        <div>
-            <strong>דוא"ל:</strong>
-            <a href="mailto:gdolim1@gdolim.org.il" role="link">gdolim1@gdolim.org.il</a>
+    <div class="events-content flex-rows">
+        <div class="flex-cols events-content-title">
+            <button  id="go-back" class="go-back" onclick="backButtonClicked()" title="חזור">חזור</button>
+<!--
+            <div class="back-button" onclick="backButtonClicked()"><i class="left"></i>חזור</div>
+-->
+            <div>לוח אירועים</div>
         </div>
-        <div><strong>כתובת:</strong> ת.ד 815 גבעתיים, מיקוד 5310801 </div>
+        <img class="events-content-img" src="img/events-header.jpg">
+        <div id="events_content"
+             class="events-content-container flex-cols">
+            <button  id="go-top" class="go-top" onclick="goTop()" title="Go to top">למעלה</button>
+        </div>
     </div>
-    <div class="events-footer-logo">
-        <img class="events-footer-logo-img" src="img/logo_one_color_footer.png">
+    <div class="events-footer flex-cols">
+        <div class="events-footer-details">
+            <div><strong>טלפון:</strong> 036195977 </div>
+            <div>
+                <strong>דוא"ל:</strong>
+                <a href="mailto:gdolim1@gdolim.org.il" role="link">gdolim1@gdolim.org.il</a>
+            </div>
+            <div><strong>כתובת:</strong> ת.ד 815 גבעתיים, מיקוד 5310801 </div>
+        </div>
+        <div class="events-footer-logo">
+            <img class="events-footer-logo-img" src="img/logo_one_color_footer.png">
+        </div>
+
     </div>
-
-</div>
-<script src="js/events_list.js"></script>
-
+    <script src="js/events_list.js"></script>
 </body>
 </html>
