--- a/www/index.html
+++ b/www/index.html
@@ -49,16 +49,25 @@
     }
 </script>
 
-<div class="flex-rows main">
-    <img class="major main-img" src="img/gdolim_main_page.PNG">
-    <div class="flex-cols buttons">
-        <span class="my-button" onclick="gotoEvents()">ארועים</span>
-        <span class="space"></span>
-        <span class="my-button next-button" onclick="gotoRights()">זכויות</span>
-    </div>
-    <div class="footer">
-        <div class="row">
-
+<div class="flex-rows">
+    <img class="main-img" src="img/gdolim_main_page.PNG">
+    <div class="footer flex-rows">
+        <div class="flex-cols main-button-container">
+            <div class="main-button" onclick="gotoEvents()">ארועים</div>
+            <div class="main-button" onclick="gotoRights()">זכויות</div>
+        </div>
+        <div class="flex-cols">
+            <div class="footer-details">
+                <div><strong>טלפון:</strong> 036195977 </div>
+                <div>
+                    <strong>דוא"ל:</strong>
+                    <a href="mailto:gdolim1@gdolim.org.il" role="link">gdolim1@gdolim.org.il</a>
+                </div>
+                <div><strong>כתובת:</strong> ת.ד 815 גבעתיים, מיקוד 5310801 </div>
+            </div>
+            <div>
+                <img class="footer-logo-img" src="img/logo_one_color_footer.png">
+            </div>
         </div>
     </div>
 </div>
