--- a/www/rights.html
+++ b/www/rights.html
@@ -1,6 +1,14 @@
 <html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/rights.css">
+</head>
+
 <body>
-<iframe src="http://www.kolzchut.org.il/he/%D7%97%D7%95%D7%9C%D7%99_%D7%A1%D7%A8%D7%98%D7%9F"
-        style="height: 100%;width:100%"></iframe>
+<button  id="go-back" class="go-back" onclick="backButtonClicked()" title="חזור">חזור</button>
+<iframe class="rights-content" src="http://www.kolzchut.org.il/he/%D7%97%D7%95%D7%9C%D7%99_%D7%A1%D7%A8%D7%98%D7%9F"
+        style="height: 100%;width:100%">
+</iframe>
+<script src="js/rights.js"></script>
 </body>
 </html>
