add link to all events

--- a/www/events_list.html
+++ b/www/events_list.html
@@ -22,6 +22,11 @@
              class="events-content-container flex-cols">
             <button  id="go-top" class="go-top" onclick="goTop()" title="Go to top">למעלה</button>
         </div>
+        <div class="pojo-button-wrap pojo-button-center">
+            <a class="button size-large" style="background-color:rgba(185,69,132,1);border-color:#b94584;color:#ffffff" href="https://www.gdolim.org.il/events" role="link">
+                <span class="pojo-button-text">לכל האירועים</span>
+            </a>
+        </div>
     </div>
     <div class="events-footer flex-cols">
         <div class="events-footer-details">
