--- a/www/rights.html
+++ b/www/rights.html
@@ -7,7 +7,7 @@
 <body>
 <!--button  id="go-back" class="go-back" onclick="backButtonClicked()" title="חזור">חזור</button-->
 <iframe class="rights-content" src="http://www.kolzchut.org.il/he/%D7%97%D7%95%D7%9C%D7%99_%D7%A1%D7%A8%D7%98%D7%9F"
-        style="height: 100%;width:100%">
+			="height: 100%;width:100%;margin:0">
 </iframe>
 <script src="js/rights.js"></script>
 </body>
