--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,10 @@
         </div>
         <div class="flex-cols">
             <div class="footer-details">
-                <div><strong>טלפון:</strong> 036195977 </div>
+                <div>
+					<strong>טלפון:</strong>
+					<a href="tel:+97236195977" role="link">03-6195977</a>
+				</div>	
                 <div>
                     <strong>דוא"ל:</strong>
                     <a href="mailto:gdolim1@gdolim.org.il" role="link">gdolim1@gdolim.org.il</a>
