remove back from events and rights fix font size for event list

--- a/www/events_list.html
+++ b/www/events_list.html
@@ -10,13 +10,7 @@
         <img class="events-header-img" src="img/gdolim_header.png">
     </div>
     <div class="events-content flex-rows">
-        <div class="flex-cols events-content-title">
-            <button  id="go-back" class="go-back" onclick="backButtonClicked()" title="חזור">חזור</button>
-<!--
-            <div class="back-button" onclick="backButtonClicked()"><i class="left"></i>חזור</div>
--->
-            <div>לוח אירועים</div>
-        </div>
+        <div class="flex-cols events-content-title">לוח אירועים</div>
         <img class="events-content-img" src="img/events-header.jpg">
         <div id="events_content"
              class="events-content-container flex-cols">
