remove use with flex

--- a/www/events_list.html
+++ b/www/events_list.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/events_list.css">
+    <link rel="stylesheet" type="text/css" href="css/events.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
 		<!-- events data  -->
 		<!-- ============ -->
         <div id="events_content"
-             class="events-content-container flex-cols">
+             class="events-content-container2">
             <!--<button id="go-top" class="go-top" onclick="goTop()" title="Go to top">למעלה</button>-->
         </div>
 		
