--- a/www/rights.html
+++ b/www/rights.html
@@ -15,7 +15,7 @@
     אנא המתן
 </div>
 <iframe onload="frameload()" src="http://www.kolzchut.org.il/he/%D7%97%D7%95%D7%9C%D7%99_%D7%A1%D7%A8%D7%98%D7%9F"
-        style="height: 100%;width:100%;margin:0">
+        style="height: 100%;width:100%;margin:0; border:0">
 </iframe>
 </body>
 </html>
